--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,9 @@
-on:
-  push:
-    branches: master
-
 name: Render and Deploy RMarkdown Website
-
+'on': push
 jobs:
   build:
     runs-on: ubuntu-18.04
-        steps:
+    steps:
       - name: Checkout Repository
         uses: actions/checkout@master
       - name: Install Package Dependencies
