--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
         if: github.ref == 'refs/heads/master'
         uses: maxheld83/ghpages@v0.3.0
         env:
-          BUILD_DIR: $DEPLOY_PATH
+          BUILD_DIR: public/
           GH_PAT: ${{ secrets.GH_PAT }}
     container: rocker/verse:latest
