--- a/_site.yml
+++ b/_site.yml
@@ -1,69 +1,87 @@
-name: "EMSE 6035: Marketing Analytics for Design Decisions"
+name: "EMSE 6035: Marketing Analytics for Design Decisions - Fall 2021"
 output_dir: _site
 exclude:
 - DESCRIPTION
-- LICENSE
+- README
 new_session: true
 navbar:
-  title: "MADD - Fall 2021"
+  title: ""
   left:
-    - text: "Home"
+    - text: ""
+      icon: fas fa-home
       href: index.html
     - text: Syllabus
-      icon: fa-map-ok
+      icon: fa fa-map
       href: syllabus.html
     - text: "Schedule"
+      icon: fa fa-calendar-alt
       href: schedule.html
+    - text: "Class"
+      icon: fas fa-laptop-code
+      menu:
+        - text: "Sep 01: Getting Started"
+          href: c1-getting-started.html
     - text: "Readings"
+      icon: fas fa-book-reader
       menu:
-        - text: "0: Course prep"
-          href: r0-course-prep.html
-        - text: "1: Course introduction"
-          href: r1-course-introduction.html
-    - text: "Assignments"
+        - text: "Sep 01: Data Wrangling (Due 09/07)"
+          href: r1-data-wrangling.html
+    - text: "Project"
+      icon: fas fa-pencil-ruler
       menu:
-        - text: "0: Class prerequisites"
-          href: a0-course-prereqs.html
-    - text: "Resources"
+        - text: "Course Prerequisites (optional)"
+          href: a-course-prereqs.html
+        - text: "Proposals (Due 09/24)"
+          href: p1-proposals.html
+    - text: "References"
+      icon: fa fa-bookmark
       menu:
+        - text: "Course Software"
+          icon: fas fa-hdd
+          href: ref-course-software.html
         - text: "Getting Help"
-          icon: fa-question-circle
+          icon: fas fa-question-circle
           href: ref-getting-help.html
         - text: "Visualizing Data"
-          icon: fa-chart-bar
+          icon: fas fa-chart-bar
           href: ref-visualizing-data.html
         - text: "Programming in R"
-          icon: fa-terminal
+          icon: fas fa-terminal
           href: ref-programming.html
         - text: "R Markdown"
-          icon: fa-feather-alt
+          icon: fas fa-feather-alt
           href: ref-rmarkdown.html
         - text: "Other"
-          icon: fa-ellipsis-h
+          icon: fas fa-expand
           href: ref-other.html
-    - text: "About"
+    - text: "Tools"
+      icon: fas fa-tools
       menu:
-        - text: About
-          icon: fa-info-circle
-          href: about.html
-        - text: License
-          icon: fa-gavel
-          href: LICENSE.html
-        - text: DataCamp
-          icon: fa-graduation-cap
-          href: datacamp.html
-    - text: Slack
-      icon: fa-slack
-      href: https://emse-madd-s22.slack.com
+        - text: "RStudio Server"
+          icon: fab fa-r-project
+          href: https://rstudio.seas.gwu.edu/
+        - text: "Schedule a meeting w/Prof. Helveston"
+          icon: fas fa-user-clock
+          href: https://jhelvy.appointlet.com/b/professor-helveston
+    - text: ""
+      icon: fab fa-slack
+      href: https://emse-madd-s21.slack.com
+
   right:
-  - icon: fa-bars
+  - icon: fas fa-bars
     menu:
+    - text: About
+      icon: fas fa-info-circle
+      href: about.html
+    - text: License
+      icon: fas fa-gavel
+      href: LICENSE.html
     - text: Contact
-      icon: fa-envelope
+      icon: fas fa-envelope
       href: mailto:jph@gwu.edu
-    - text: GitHub
-      icon: fa-github
-      href: https://github.com/emse-madd-gwu/2022-Spring
+    - text: Source files
+      icon: fab fa-github
+      href: https://github.com/emse-madd-gwu/2021-Fall/
 
 output:
   html_document:
