--- a/_site.yml
+++ b/_site.yml
@@ -50,6 +50,24 @@ navbar:
           href: r0-self-assessment.html
         - text: "Sep 01: Data Wrangling (Due 09/07)"
           href: r1-data-wrangling.html
+        - text: "date: Plotting (Due 09/14)"
+          href: r2-plotting.html
+        - text: "date: formr (Due 09/21)"
+          href: r3-formr.html
+        - text: "date: Utility Models (Due 10/12)"
+          href: r4-utility-models.html
+        - text: "date: Estimation (Due 10/19)"
+          href: r5-estimation.html
+        - text: "date: WTP & Simulations (Due 10/26)"
+          href: r6-wtp-simulation.html
+        - text: "date: Design of Experiment (Due 11/02)"
+          href: r7-doe.html
+        - text: "date: Uncertainty (Due 11/16)"
+          href: r8-uncertainty.html
+        - text: "date: Heterogeneity (Due 11/30)"
+          href: r9-heterogeneity.html
+        - text: "date: Exam (Due 12/05)"
+          href: r10-exam.html
     - text: "Project"
       icon: fas fa-pencil-ruler
       menu:
