small tweaks to w14 content

--- a/_site.yml
+++ b/_site.yml
@@ -41,7 +41,7 @@ navbar:
           href: c11-wtp-simulation.html
         - text: "Nov 17: Heterogeneity"
           href: c12-heterogeneity.html
-        - text: "Dec 01: Class Review & Final Analysis Overview"
+        - text: "Dec 01: Exam Review & Final Analysis Overview"
           href: c14-review.html
         - text: "Dec 08: Exam Solutions"
           href: c15-exam-solutions.html
